# Change file for File::Hotfolder

{{$NEXT}}

0.01  2015-03-23 17:14:18 CET
    - inital release