@@ -1,0 +1,19 @@
+language: perl
+perl:
+    - "5.20"
+    - "5.18"
+    - "5.16"
+    - "5.14"
+    - "5.12"
+install:
+    - cpanm --quiet --notest --skip-satisfied Dist::Milla AnyEvent
+    - cpanm --installdeps .
+
+# full release test
+script:
+    - milla smoke --release --author
+
+# normal tests and report test coverage to coveralls.io
+after_success:
+    - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
+    - perl Build.PL && ./Build build && cover -test -report coveralls
