@@ -1,4 +1,4 @@
 # This Build.PL for File-Hotfolder was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
-use v5.10.1;
+use v5.10.0;
 use Module::Build::Tiny 0.039;
 Build_PL();
