@@ -1,2 +1,4 @@
-requires 'perl', '5.10.1';
+requires 'perl', '5.10.0';
 requires 'Linux::Inotify2';
+
+suggests 'AnyEvent';
