@@ -1,6 +1,8 @@
 # Change file for File::Hotfolder
 
 {{$NEXT}}
+    - improved documentation and examples
+    - new options: print, fullname, filter
 
 0.01  2015-03-23 17:14:18 CET
     - inital release
